--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -23,6 +23,9 @@
                 <button (click)="navigateAndClose('/tasks')">Tasks</button>
             </li>
             <li>
+                <button (click)="navigateAndClose('/habits')">Habits</button>
+            </li>
+            <li>
                 <button (click)="navigateAndClose('/chart')">Charts</button>
             </li>
         </ul>
