--- a/src/app/pages/chart/chart.component.scss
+++ b/src/app/pages/chart/chart.component.scss
@@ -1,6 +1,7 @@
 .visualization {
     text-align: center;
     padding: 20px;
+    animation: fadeIn 1.5s ease-in-out;
   
     h2 {
       font-size: 2rem;
@@ -28,7 +29,8 @@
     }
   }
   
-  @keyframes fadeIn {
+/* Fade-In Keyframe Animation */
+@keyframes fadeIn {
     from {
       opacity: 0;
     }
@@ -38,13 +40,37 @@
     }
   }
   
-  .welcome {
+  /* Fade-Out Keyframe Animation */
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+    }
+  }
+  
+  /* Global Fade-In Class */
+  .fade-in {
     animation: fadeIn 1.5s ease-in-out;
   }
   
+  /* Global Fade-Out Class */
   .fade-out {
     animation: fadeOut 1.5s ease-in-out;
   }
+
   .start-day-btn {
     margin-left: 22px;
   }
+
+//   .chart-container {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     width: 100%;
+//     height: 100%;
+//     margin: 0;
+//     padding: 0;
+//   }
