--- a/src/app/pages/tasks/tasks.component.scss
+++ b/src/app/pages/tasks/tasks.component.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     min-height: 100vh;
     /* Ensures it takes the full viewport height */
     width: 100%;
@@ -45,6 +44,10 @@
     button {
       margin-top: 20px;
     }
+  }
+
+  .task-text {
+    margin-top: 7px;
   }
   
   .tasks {
