--- a/src/app/pages/chart/chart.component.html
+++ b/src/app/pages/chart/chart.component.html
@@ -1,4 +1,4 @@
-<div class="visualization">
+<div [class]="{ 'fade-out': isFadingOut }" class="visualization">
     <div class="controls">
         <label for="chartType">Chart Type:</label>
         <select id="chartType" [formControl]="chartTypeControl">
@@ -9,7 +9,7 @@
             <option value="area">Area Chart</option>
         </select>
     </div>
-
+    <p style="color:red">the data presented here is fake. Charts are coming soon with your data!</p>
     @if (chartOptions.chart.type != 'donut') {
     <div class="chart-section">
         <h2>Task Visualization</h2>
