added disable button if nothing is in tasks input

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -14,7 +14,7 @@
         
       </div>
       <div class="centered-tasks">
-        <button type="submit">Add Task</button>
+        <button [disabled]="tasksForm.get('taskInput')?.value?.trim() === ''" type="submit">Add Task</button>
       </div>
       
     </form>
