--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,38 +1,49 @@
 <div [class]="{ 'fade-out': isFadingOut }" class="welcome centered">
-    <h1 class="fade-in">Hello.</h1>
-    <p class="fade-in">
-      Welcome to Daeleez. What are we going to try to accomplish today?
-    </p>
-    <form [formGroup]="tasksForm" (ngSubmit)="addTask()">
-      <div class="input-container">
-        <input
-          type="text"
-          formControlName="taskInput"
-          (keydown.enter)="addTask()"
-          placeholder="Type a task and hit Enter"
-        />
-        
-      </div>
-      <div class="centered-tasks">
-        <button [disabled]="tasksForm.get('taskInput')?.value?.trim() === ''" type="submit">Add Task</button>
-      </div>
-      
-    </form>
+  <img src="/assets/daeleez-logo.png" alt="daeleez-logo" class="logo" />
+  <h1 class="fade-in">Hello.</h1>
+  <p class="fade-in">
+    Welcome to Daeleez. What are we going to try to accomplish today?
+  </p>
+  <form [formGroup]="tasksForm" (ngSubmit)="addTask()">
+    <div class="input-container">
+      <input
+        type="text"
+        formControlName="taskInput"
+        (keydown.enter)="addTask()"
+        placeholder="Type a task and hit Enter"
+      />
+    </div>
+    <div class="centered-tasks">
+      <button
+        [disabled]="tasksForm.get('taskInput')?.value?.trim() === ''"
+        type="submit"
+      >
+        Add Task
+      </button>
+    </div>
+  </form>
   <div class="centered-tasks">
     <ul>
-        @for (task of tasks; track task.id) {
-        <li class="fade-in">
-          {{ task.text }}
-        </li>
-        }
-      </ul>
+      @for (task of tasks; track task.id) {
+      <li class="fade-in">
+        {{ task.text }}
+      </li>
+      }
+    </ul>
   </div>
-    
-  
-    <button class="start-day-btn" (click)="startDay()" [disabled]="tasks.length === 0">
-      Start Your Day
-    </button>
-    <button class="start-day-btn" (click)="resetData()" [disabled]="tasks.length === 0">
-      Reset
-    </button>
-  </div>
+
+  <button
+    class="start-day-btn"
+    (click)="startDay()"
+    [disabled]="tasks.length === 0"
+  >
+    Start Your Day
+  </button>
+  <button
+    class="start-day-btn"
+    (click)="resetData()"
+    [disabled]="tasks.length === 0"
+  >
+    Reset
+  </button>
+</div>
