--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,6 @@
 .welcome {
   text-align: center;
+  justify-content: center;
 
   h1 {
     font-size: 2.5rem;
@@ -77,41 +78,39 @@
 .fade-out {
   animation: fadeOut 1.5s ease-in-out;
 }
-.start-day-btn {
-  margin-left: 22px;
-}
 
 .input-container {
-    display: flex;
-    justify-content: center; /* Centers horizontally */
-    align-items: center; /* Centers vertically */
-    gap: 10px; /* Space between input and button */
-    margin-left: 17px;
-  }
-  
-  .input-container input {
-    flex-grow: 1; /* Allows the input to take available space */
-    max-width: 400px; /* Set a max width for consistency */
-    padding: 10px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-  }
-  
-  .input-container button {
-    padding: 10px 20px;
-    background-color: #6cb2eb;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
-  }
-  
-  .input-container button:hover {
-    background-color: #549fce;
-  }
-.centered-tasks {
-    margin-left: 17px;
+  display: flex;
+  gap: 10px;
+}
+
+.input-container input {
+  flex-grow: 1; /* Allows the input to take available space */
+  max-width: 400px; /* Set a max width for consistency */
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+}
+
+.input-container button {
+  padding: 10px 20px;
+  background-color: #6cb2eb;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+}
+
+.input-container button:hover {
+  background-color: #549fce;
+}
+
+.logo {
+  display: block;
+  margin: 0 auto 20px; /* Center and add space below */
+  max-width: 150px; /* Adjust size */
+  height: auto; /* Maintain aspect ratio */
 }
